--- a/News(oc)/News(oc)/CustomBarView.xib
+++ b/News(oc)/News(oc)/CustomBarView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -49,7 +49,7 @@
                 <outlet property="cancelButton" destination="Frg-DY-RlY" id="Yfa-es-l4F"/>
                 <outlet property="searchBar" destination="nSc-xN-eRa" id="rdb-47-pip"/>
             </connections>
-            <point key="canvasLocation" x="262" y="242"/>
+            <point key="canvasLocation" x="162.5" y="244"/>
         </view>
     </objects>
 </document>
