--- a/News(oc)/News(oc)/FirstTableViewCell.xib
+++ b/News(oc)/News(oc)/FirstTableViewCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -21,25 +21,20 @@
                             <constraint firstAttribute="width" constant="96" id="g5o-SY-tyy"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ruK-ZK-3ir">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ruK-ZK-3ir">
                         <rect key="frame" x="112" y="8" width="255" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="749" verticalHuggingPriority="749" horizontalCompressionResistancePriority="749" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VfP-jh-CXl">
-                        <rect key="frame" x="112" y="33" width="255" height="39"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                        <nil key="highlightedColor"/>
-                    </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rbe-ks-KpW">
                         <rect key="frame" x="336" y="57" width="31" height="15"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="15" id="dTu-yF-JM6"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <color key="textColor" red="0.50196081400000003" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
@@ -59,19 +54,15 @@
                     <constraint firstItem="k8s-hl-nfX" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="5Xh-66-rg9"/>
                     <constraint firstItem="ruK-ZK-3ir" firstAttribute="leading" secondItem="k8s-hl-nfX" secondAttribute="trailing" constant="8" id="7k0-pf-qWx"/>
                     <constraint firstItem="k8s-hl-nfX" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="98e-kP-17p"/>
-                    <constraint firstItem="VfP-jh-CXl" firstAttribute="leading" secondItem="k8s-hl-nfX" secondAttribute="trailing" constant="8" id="A3J-QV-zvt"/>
                     <constraint firstAttribute="trailing" secondItem="rbe-ks-KpW" secondAttribute="trailing" constant="8" id="G3N-Nl-2Kc"/>
                     <constraint firstItem="ruK-ZK-3ir" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="JCw-bb-VpW"/>
-                    <constraint firstAttribute="trailing" secondItem="VfP-jh-CXl" secondAttribute="trailing" constant="8" id="StP-sP-Kvo"/>
                     <constraint firstItem="k8s-hl-nfX" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="arV-Yu-2xd"/>
-                    <constraint firstItem="VfP-jh-CXl" firstAttribute="top" secondItem="ruK-ZK-3ir" secondAttribute="bottom" constant="4" id="biH-Ax-1QB"/>
-                    <constraint firstAttribute="bottom" secondItem="VfP-jh-CXl" secondAttribute="bottom" constant="8" id="h40-3c-Lk9"/>
                     <constraint firstAttribute="bottom" secondItem="rbe-ks-KpW" secondAttribute="bottom" constant="8" id="j1e-63-p9M"/>
                     <constraint firstAttribute="trailing" secondItem="ruK-ZK-3ir" secondAttribute="trailing" constant="8" id="nda-Qm-FAB"/>
+                    <constraint firstItem="rbe-ks-KpW" firstAttribute="top" relation="greaterThanOrEqual" secondItem="ruK-ZK-3ir" secondAttribute="bottom" constant="8" id="t97-5M-sLO"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
-                <outlet property="contentLabel" destination="VfP-jh-CXl" id="cLF-dc-3dP"/>
                 <outlet property="replyLabel" destination="rbe-ks-KpW" id="UmM-tP-mNA"/>
                 <outlet property="titleImageView" destination="k8s-hl-nfX" id="OjE-K4-oEX"/>
                 <outlet property="titleLabel" destination="ruK-ZK-3ir" id="VWm-kd-gMy"/>
