--- a/News(oc)/News(oc)/VideoTableViewCell.xib
+++ b/News(oc)/News(oc)/VideoTableViewCell.xib
@@ -46,20 +46,23 @@
                         </constraints>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4iW-6X-u8r">
-                        <rect key="frame" x="432" y="185" width="30" height="30"/>
+                        <rect key="frame" x="412" y="185" width="50" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="euf-vx-DAS"/>
-                            <constraint firstAttribute="width" constant="30" id="rPd-eV-oBf"/>
+                            <constraint firstAttribute="width" constant="50" id="rPd-eV-oBf"/>
                         </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <state key="normal" title="播放量：">
+                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                        </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kfj-iq-taS">
-                        <rect key="frame" x="462" y="189" width="50" height="21"/>
+                        <rect key="frame" x="462" y="190" width="50" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="W4N-J5-3mA"/>
                             <constraint firstAttribute="width" constant="50" id="WVJ-fM-dHu"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="audionews_index_play.png" translatesAutoresizingMaskIntoConstraints="NO" id="yAy-Zz-it3">
@@ -82,7 +85,7 @@
                 <constraints>
                     <constraint firstItem="Svc-zS-hRL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="6yQ-lM-6Lz"/>
                     <constraint firstItem="XQo-eG-zbq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="96c-vg-KfA"/>
-                    <constraint firstItem="kfj-iq-taS" firstAttribute="top" secondItem="XQo-eG-zbq" secondAttribute="bottom" constant="9" id="9cU-FT-iAu"/>
+                    <constraint firstItem="kfj-iq-taS" firstAttribute="top" secondItem="XQo-eG-zbq" secondAttribute="bottom" constant="10" id="9cU-FT-iAu"/>
                     <constraint firstItem="FhC-BN-M6y" firstAttribute="top" secondItem="XQo-eG-zbq" secondAttribute="bottom" constant="5" id="Emx-GX-9Lf"/>
                     <constraint firstItem="yAy-Zz-it3" firstAttribute="centerY" secondItem="XQo-eG-zbq" secondAttribute="centerY" id="G29-LY-eCc"/>
                     <constraint firstAttribute="trailing" secondItem="Svc-zS-hRL" secondAttribute="trailing" constant="8" id="Gll-yO-GQe"/>
